// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-vue2 > should add vue-loader and VueLoaderPlugin correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/lib/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
              "experimentalInlineMatchResource": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    VueLoaderPlugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;

exports[`plugin-vue2 > should allow to configure vueLoader options 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/lib/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
              "experimentalInlineMatchResource": true,
              "hotReload": false,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    VueLoaderPlugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;
